A bit more inverstigation of java gems